tests/fixtures/invalid/round_none_str.py
# Cannot call round() with None, Str
x = round(None, "hello")
